# imgPick

./: .gitignore  CLAUDE.md  PLAN.md  ROADMAP.md  deduplicator.py  exif_reader.py  exporter.py  gui.py  main.py  pyproject.toml  scorer.py  setup.bat  setup.ps1  start.bat  utils.py  video_processor.py
